Fixed the zoom issue but still not sure if it will work on mobile. Have yet to find a good plugin that works on mobile properly.

--- a/students/static/students/building/building.css
+++ b/students/static/students/building/building.css
@@ -17,24 +17,6 @@
     margin-bottom: 18px;
 }
 
-.thumbnail-label {
-    top:0;
-    left:0;
-    position: absolute;
-}
-
-.thumb-div {
-    padding-right: 8px;
-    padding-left: 8px;
-}
-
-.thumbnail {
-    border-radius: 0;
-    position:relative;
-    text-align: center;
-    vertical-align: middle;
-}
-
 .stat-panel-heading .panel-title {
     text-transform: uppercase;
     font-family: "Ideal Sans SSm A", "Ideal Sans SSm B", "Ideal Sans", sans-serif;
@@ -53,11 +35,41 @@
     background-color: #fcfcfc;
 }
 
-/* get rid of upper margin only when the floor plan/room panels are displaying next to each other */
-@media (min-width: 992px) {
-    
-#floorPlanName {
-    margin-top: 0px;
+/* -------------------------
+       Floor Plan Images
+   ------------------------- */
+
+.thumbnail-label {
+    top:0;
+    left:0;
+    position: absolute;
 }
 
+.thumb-div {
+    padding-right: 8px;
+    padding-left: 8px;
 }
+
+.thumbnail {
+    border-radius: 0;
+    position:relative;
+    text-align: center;
+    vertical-align: middle;
+}
+
+/* get rid of upper margin only when the floor plan/room panels are displaying next to each other */
+@media (min-width: 992px) {  
+    #floorPlanName {
+        margin-top: 0px;
+    }
+}
+
+/*set a border on the images to prevent shifting*/
+ #thumbnail-gallery img {
+     border:2px solid white;
+}
+ 
+/*Change the colour
+.active img {
+     border:2px solid #333 !important;
+}*/
